raps-cli/tests/snapshots/mcp_auth_tests__error_guidance_missing_client_id.snap
---
source: raps-cli/tests/mcp_auth_tests.rs
assertion_line: 247
expression: guidance
---
Authentication Error: Missing Client ID

Missing: APS_CLIENT_ID environment variable

The Client ID is required for all APS operations. To get your Client ID:
1. Go to https://aps.autodesk.com/
2. Navigate to your application's settings
3. Copy the "Client ID" value
4. Set APS_CLIENT_ID environment variable
