raps-cli/tests/snapshots/mcp_auth_tests__error_guidance_missing_client_secret.snap
---
source: raps-cli/tests/mcp_auth_tests.rs
assertion_line: 254
expression: guidance
---
Authentication Error: Missing Client Secret

Missing: APS_CLIENT_SECRET environment variable

The Client Secret is required for authentication. To get your Client Secret:
1. Go to https://aps.autodesk.com/
2. Navigate to your application's settings
3. Copy or regenerate the "Client Secret" value
4. Set APS_CLIENT_SECRET environment variable

Note: Keep your Client Secret secure and never share it publicly.
