raps-cli/tests/snapshots/mcp_auth_tests__tool_availability_no_auth.snap
---
source: raps-cli/tests/mcp_auth_tests.rs
assertion_line: 208
expression: summary
---

Tool Availability:
  ✗ OSS (bucket_*, object_*) - requires 2-legged auth
  ✗ Derivative (translate_*) - requires 2-legged auth
  ✗ Admin (admin_*) - requires 2-legged auth
  ✗ Data Management (hub_*, project_*, folder_*, item_*) - requires 3-legged auth
  ✗ ACC (issue_*, rfi_*, acc_*) - requires 3-legged auth
